Migbash/issue-1752 | competition lobby/highlights; (#1797)
* feat :: lobby/highlights data endpoint upgrade;

* doc :: OpenAPI update;

* feat :: Highlights-Grid-Row upgrade;

* feat :: Highlights-Grid upgrade;

* feat :: Highlights-Widget upgrade;

* core :: utils.ts update for 'white-space' removal of endpoints;

* pkg :: scores-lib 1.9.0;

* debug :: remove redundant console.log(..);
